[metadata]
name = eicm
description = A collection of function to estimate an illumination correction matrix.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fmi-faim/eicm.git
author = Tim-Oliver Buchholz, Sabine Reither
author_email = tim-oliver.buchholz@fmi.ch, sabine.reither@fmi.ch
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/fmi-faim/eicm/issues
    Documentation = https://github.com/fmi-faim/eicm#README.md
    Source Code = https://github.com/fmi-faim/eicm
    User Support = https://github.com/fmi-faim/eicm/issues

[options]
packages = find:
install_requires =
    numpy
    pandas
    scikit-image
    scipy
    tifffile
    tqdm
python_requires = >=3.9
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src
